--- a/server/tests/drivers/rhevm/fixtures/test_0006_must_allow_to_create_a_new_instance_and_make_it_running-start-4.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0006_must_allow_to_create_a_new_instance_and_make_it_running-start-4.yml
@@ -20,7 +20,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:45 GMT
+      - Fri, 09 Nov 2012 08:59:51 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -32,7 +32,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=kvKIEmnypU3N8r0CdQ6zqh8q; Path=/api; Secure
+      - JSESSIONID=CZ+qloMhqDDj6dK6IkbVqVpP; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -54,7 +54,7 @@ http_interactions:
         </data_center>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:46 GMT
+  recorded_at: Fri, 09 Nov 2012 08:59:52 GMT
 - request: 
     method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/vms?search=datacenter=Default
@@ -75,7 +75,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:45 GMT
+      - Fri, 09 Nov 2012 08:59:51 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -87,7 +87,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=46hcYRkK7zLQJ1ecrxyg66lY; Path=/api; Secure
+      - JSESSIONID=TL38qHGZIiATTkFbsHaZldP-; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -185,7 +185,7 @@ http_interactions:
                 <link href="/api/vms/1fbe1fc8-9814-4af8-955e-915b67f07a9c/statistics" rel="statistics"/>
                 <type>server</type>
                 <status>
-                    <state>powering_down</state>
+                    <state>up</state>
                 </status>
                 <memory>1073741824</memory>
                 <cpu>
@@ -500,7 +500,7 @@ http_interactions:
         </vms>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:46 GMT
+  recorded_at: Fri, 09 Nov 2012 08:59:52 GMT
 - request: 
     method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/vms/1fbe1fc8-9814-4af8-955e-915b67f07a9c/nics
@@ -521,7 +521,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:45 GMT
+      - Fri, 09 Nov 2012 08:59:51 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -533,7 +533,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=QykGwpgoneGLx6who6TctmSP; Path=/api; Secure
+      - JSESSIONID=frvWtdXx7HUDOuh8oNiOqEyB; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -554,7 +554,7 @@ http_interactions:
         </nics>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:46 GMT
+  recorded_at: Fri, 09 Nov 2012 08:59:53 GMT
 - request: 
     method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/vms/a921bfe6-9ba6-4761-9e95-42737768ff8c/nics
@@ -575,7 +575,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:46 GMT
+      - Fri, 09 Nov 2012 08:59:52 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -587,7 +587,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=882n7HWXIzvPcZmRESz43FdX; Path=/api; Secure
+      - JSESSIONID=gK1rxHAprrojwhYWBSW+K7oB; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -608,5 +608,5 @@ http_interactions:
         </nics>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:47 GMT
+  recorded_at: Fri, 09 Nov 2012 08:59:53 GMT
 recorded_with: VCR 2.2.5
