--- a/server/tests/drivers/rhevm/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0001_must_throw_error_when_wrong_credentials.yml
@@ -1,56 +1,42 @@
----
-http_interactions:
-- request:
+--- 
+http_interactions: 
+- request: 
     method: get
     uri: https://unknown:wrong@dell-per610-02.lab.eng.brq.redhat.com/api/datacenters/9df72b84-0234-11e2-9b87-9386d9b09d4a
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
+    body: 
+      string: ""
+    headers: 
+      Content-Type: 
       - application/xml
-      Accept-Encoding:
+      Accept: 
+      - application/xml
+      Accept-Encoding: 
       - gzip, deflate
-      Content-Type:
-      - application/xml
-      User-Agent:
-      - Ruby
-  response:
-    status:
+  response: 
+    status: 
       code: 401
       message: Unauthorized
-    headers:
-      Date:
-      - Wed, 07 Nov 2012 15:12:08 GMT
-      Pragma:
-      - No-cache
-      Cache-Control:
+    headers: 
+      Cache-Control: 
       - no-cache
-      Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Set-Cookie:
-      - JSESSIONID=nqlELoKXom85gQr6kcO4QkeX; Path=/api; Secure
-      Www-Authenticate:
+      Www-Authenticate: 
       - Basic realm="ENGINE"
-      Content-Type:
+      Content-Type: 
       - text/html;charset=utf-8
-      Content-Length:
-      - '978'
-      Connection:
+      Set-Cookie: 
+      - JSESSIONID=GAKFIJcON-ahGoQHZfVzT5vm; Path=/api; Secure
+      Content-Length: 
+      - "978"
+      Pragma: 
+      - No-cache
+      Expires: 
+      - Thu, 01 Jan 1970 01:00:00 CET
+      Connection: 
       - close
-    body:
-      encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
-        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
-        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
-        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
-        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
-        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
-        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
-        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
-        Status 401 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
-        <u></u></p><p><b>description</b> <u>This request requires HTTP authentication
-        ().</u></p><HR size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
+      Date: 
+      - Fri, 09 Nov 2012 08:52:52 GMT
+    body: 
+      string: "<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;} H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;} H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;} BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;} B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;} P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP Status 401 - </h1><HR size=\"1\" noshade=\"noshade\"><p><b>type</b> Status report</p><p><b>message</b> <u></u></p><p><b>description</b> <u>This request requires HTTP authentication ().</u></p><HR size=\"1\" noshade=\"noshade\"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>"
     http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:12:10 GMT
+  recorded_at: Fri, 09 Nov 2012 08:52:53 GMT
 recorded_with: VCR 2.2.5
