--- a/server/tests/drivers/rhevm/fixtures/test_0005_must_throw_proper_exception_when_destroying_used_image.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0005_must_throw_proper_exception_when_destroying_used_image.yml
@@ -2,49 +2,6 @@
 http_interactions:
 - request:
     method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/dfa924b7-83e8-4a5c-9d5c-1270fd0c0872
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-      Content-Type:
-      - application/xml
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 404
-      message: Not Found
-    headers:
-      Date:
-      - Wed, 07 Nov 2012 15:12:08 GMT
-      Content-Type:
-      - text/html;charset=utf-8
-      Content-Length:
-      - '976'
-      Connection:
-      - close
-    body:
-      encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
-        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
-        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
-        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
-        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
-        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
-        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
-        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
-        Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
-        <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
-        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
-    http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:12:09 GMT
-- request:
-    method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
     body:
       encoding: US-ASCII
@@ -64,7 +21,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 07 Nov 2012 15:13:34 GMT
+      - Fri, 09 Nov 2012 09:03:59 GMT
       Pragma:
       - No-cache
       Cache-Control:
@@ -72,7 +29,7 @@ http_interactions:
       Expires:
       - Thu, 01 Jan 1970 01:00:00 CET
       Set-Cookie:
-      - JSESSIONID=oVpIbxzLgZI8CIgbvUVvvWXk; Path=/api; Secure
+      - JSESSIONID=tZUBDK6-JGHfxqHb+z0V0d+J; Path=/api; Secure
       Content-Type:
       - application/xml
       Content-Length:
@@ -101,7 +58,7 @@ http_interactions:
         \   </display>\n    <stateless>false</stateless>\n    <usb>\n        <enabled>false</enabled>\n
         \   </usb>\n</template>\n"
     http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:13:35 GMT
+  recorded_at: Fri, 09 Nov 2012 09:04:00 GMT
 - request:
     method: delete
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5
@@ -121,18 +78,18 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Wed, 07 Nov 2012 15:13:34 GMT
+      - Fri, 09 Nov 2012 09:03:59 GMT
       Content-Type:
       - application/xml
       Content-Length:
-      - '215'
+      - '208'
       Connection:
       - close
     body:
       encoding: US-ASCII
       string: ! '<?xml version="1.0" encoding="UTF-8" standalone="yes"?><fault><reason>Operation
         Failed</reason><detail>[Cannot delete Template. Template is being used by
-        the following VMs: tests0,JoeV_06112012_01.]</detail></fault>'
+        the following VMs: JoeV_06112012_01.]</detail></fault>'
     http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:13:35 GMT
+  recorded_at: Fri, 09 Nov 2012 09:04:00 GMT
 recorded_with: VCR 2.2.5
