--- a/server/tests/drivers/rhevm/fixtures/test_0006_must_allow_to_create_a_new_instance_and_make_it_running-stop-3.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0006_must_allow_to_create_a_new_instance_and_make_it_running-stop-3.yml
@@ -20,7 +20,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:45 GMT
+      - Fri, 09 Nov 2012 09:01:18 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -32,7 +32,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=kvKIEmnypU3N8r0CdQ6zqh8q; Path=/api; Secure
+      - JSESSIONID=FEscoHO1P+Y0Wn1HkAKashPI; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -54,7 +54,7 @@ http_interactions:
         </data_center>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:46 GMT
+  recorded_at: Fri, 09 Nov 2012 09:01:19 GMT
 - request: 
     method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/vms?search=datacenter=Default
@@ -75,7 +75,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:45 GMT
+      - Fri, 09 Nov 2012 09:01:19 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -87,7 +87,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=46hcYRkK7zLQJ1ecrxyg66lY; Path=/api; Secure
+      - JSESSIONID=9fbHTsoMJ6P2yFo4BIFg-lQA; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -185,7 +185,7 @@ http_interactions:
                 <link href="/api/vms/1fbe1fc8-9814-4af8-955e-915b67f07a9c/statistics" rel="statistics"/>
                 <type>server</type>
                 <status>
-                    <state>powering_down</state>
+                    <state>down</state>
                 </status>
                 <memory>1073741824</memory>
                 <cpu>
@@ -210,7 +210,6 @@ http_interactions:
                     <monitors>1</monitors>
                     <allow_override>false</allow_override>
                 </display>
-                <host href="/api/hosts/ca36391a-0234-11e2-ae20-773923039d67" id="ca36391a-0234-11e2-ae20-773923039d67"/>
                 <cluster href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95" id="99408929-82cf-4dc7-a532-9d998063fa95"/>
                 <template href="/api/templates/5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5" id="5558c5b6-9dd6-41b7-87f9-7cbce4fd40c5"/>
                 <start_time>2012-11-09T09:58:42.704+01:00</start_time>
@@ -500,7 +499,7 @@ http_interactions:
         </vms>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:46 GMT
+  recorded_at: Fri, 09 Nov 2012 09:01:20 GMT
 - request: 
     method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/vms/1fbe1fc8-9814-4af8-955e-915b67f07a9c/nics
@@ -521,7 +520,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:45 GMT
+      - Fri, 09 Nov 2012 09:01:19 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -533,7 +532,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=QykGwpgoneGLx6who6TctmSP; Path=/api; Secure
+      - JSESSIONID=iz8S7jRjV-+AtWRR+WEjWSqK; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -554,7 +553,7 @@ http_interactions:
         </nics>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:46 GMT
+  recorded_at: Fri, 09 Nov 2012 09:01:20 GMT
 - request: 
     method: get
     uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/vms/a921bfe6-9ba6-4761-9e95-42737768ff8c/nics
@@ -575,7 +574,7 @@ http_interactions:
       Cache-Control: 
       - no-cache
       Date: 
-      - Fri, 09 Nov 2012 09:00:46 GMT
+      - Fri, 09 Nov 2012 09:01:19 GMT
       Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
       Connection: 
@@ -587,7 +586,7 @@ http_interactions:
       Content-Type: 
       - application/xml
       Set-Cookie: 
-      - JSESSIONID=882n7HWXIzvPcZmRESz43FdX; Path=/api; Secure
+      - JSESSIONID=1mHUWVD5bOVOJX+7QAbkaUDq; Path=/api; Secure
     body: 
       string: |
         <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
@@ -608,5 +607,5 @@ http_interactions:
         </nics>
 
     http_version: 
-  recorded_at: Fri, 09 Nov 2012 09:00:47 GMT
+  recorded_at: Fri, 09 Nov 2012 09:01:21 GMT
 recorded_with: VCR 2.2.5
