--- a/server/tests/drivers/rhevm/fixtures/test_0006_must_support_destroying_images.yml
+++ b/server/tests/drivers/rhevm/fixtures/test_0006_must_support_destroying_images.yml
@@ -1,186 +1,326 @@
----
-http_interactions:
-- request:
+--- 
+http_interactions: 
+- request: 
     method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/a90de8a2-0619-4625-b72e-db0ff65ef927
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505
+    body: 
+      string: ""
+    headers: 
+      Content-Type: 
       - application/xml
-      Accept-Encoding:
+      Accept: 
+      - application/xml
+      Accept-Encoding: 
       - gzip, deflate
-      Content-Type:
-      - application/xml
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 404
-      message: Not Found
-    headers:
-      Date:
-      - Wed, 07 Nov 2012 15:12:09 GMT
-      Content-Type:
-      - text/html;charset=utf-8
-      Content-Length:
-      - '976'
-      Connection:
-      - close
-    body:
-      encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
-        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
-        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
-        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
-        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
-        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
-        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
-        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
-        Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
-        <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
-        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
-    http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:12:10 GMT
-- request:
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-      Content-Type:
-      - application/xml
-      User-Agent:
-      - Ruby
-  response:
-    status:
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Date:
-      - Wed, 07 Nov 2012 15:14:34 GMT
-      Pragma:
-      - No-cache
-      Cache-Control:
-      - no-cache
-      Expires:
-      - Thu, 01 Jan 1970 01:00:00 CET
-      Set-Cookie:
-      - JSESSIONID=Lyi7RciWtZZILEHgJh9p-+8p; Path=/api; Secure
-      Content-Type:
+    headers: 
+      Set-Cookie: 
+      - JSESSIONID=KRgJA8U+Dyfy2CrhDYcE68Mb; Path=/api; Secure
+      Content-Type: 
       - application/xml
-      Content-Length:
-      - '1579'
-      Connection:
+      Pragma: 
+      - No-cache
+      Expires: 
+      - Thu, 01 Jan 1970 01:00:00 CET
+      Date: 
+      - Fri, 09 Nov 2012 08:56:05 GMT
+      Content-Length: 
+      - "1574"
+      Connection: 
       - close
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n<template
-        href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be\" id=\"6d0285c9-682d-4e0f-8cf8-abd3ac9530be\">\n
-        \   <actions>\n        <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/export\"
-        rel=\"export\"/>\n    </actions>\n    <name>thrcka</name>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/disks\"
-        rel=\"disks\"/>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/nics\"
-        rel=\"nics\"/>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/cdroms\"
-        rel=\"cdroms\"/>\n    <link href=\"/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be/permissions\"
-        rel=\"permissions\"/>\n    <type>server</type>\n    <status>\n        <state>ok</state>\n
-        \   </status>\n    <memory>536870912</memory>\n    <cpu>\n        <topology
-        sockets=\"1\" cores=\"1\"/>\n    </cpu>\n    <os type=\"unassigned\">\n        <boot
-        dev=\"network\"/>\n        <boot dev=\"hd\"/>\n        <kernel></kernel>\n
-        \       <initrd></initrd>\n        <cmdline></cmdline>\n    </os>\n    <cluster
-        href=\"/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95\" id=\"99408929-82cf-4dc7-a532-9d998063fa95\"/>\n
-        \   <creation_time>2012-10-11T13:44:42.655+02:00</creation_time>\n    <origin>rhev</origin>\n
-        \   <high_availability>\n        <enabled>false</enabled>\n        <priority>1</priority>\n
-        \   </high_availability>\n    <display>\n        <type>spice</type>\n        <monitors>1</monitors>\n
-        \       <allow_override>false</allow_override>\n    </display>\n    <stateless>false</stateless>\n
-        \   <usb>\n        <enabled>false</enabled>\n    </usb>\n</template>\n"
+      Cache-Control: 
+      - no-cache
+    body: 
+      string: |
+        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+        <template href="/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505" id="fe9dcb11-a035-4d80-89b4-a4092a892505">
+            <actions>
+                <link href="/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505/export" rel="export"/>
+            </actions>
+            <name>e55f531b-500d-4f7b-aff3-39cd9edda6f7</name>
+            <description>Template by iwhd</description>
+            <link href="/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505/disks" rel="disks"/>
+            <link href="/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505/nics" rel="nics"/>
+            <link href="/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505/cdroms" rel="cdroms"/>
+            <link href="/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505/permissions" rel="permissions"/>
+            <type>server</type>
+            <status>
+                <state>ok</state>
+            </status>
+            <memory>536870912</memory>
+            <cpu>
+                <topology sockets="1" cores="1"/>
+            </cpu>
+            <os type="other_linux">
+                <boot dev="cdrom"/>
+                <boot dev="hd"/>
+            </os>
+            <cluster href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95" id="99408929-82cf-4dc7-a532-9d998063fa95"/>
+            <creation_time>2012-09-24T13:07:37.000+02:00</creation_time>
+            <origin>rhev</origin>
+            <high_availability>
+                <enabled>false</enabled>
+                <priority>0</priority>
+            </high_availability>
+            <display>
+                <type>vnc</type>
+                <monitors>1</monitors>
+                <allow_override>false</allow_override>
+            </display>
+            <stateless>false</stateless>
+            <usb>
+                <enabled>false</enabled>
+            </usb>
+        </template>
+
     http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:14:35 GMT
-- request:
+  recorded_at: Fri, 09 Nov 2012 08:56:06 GMT
+- request: 
     method: delete
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/fe9dcb11-a035-4d80-89b4-a4092a892505
+    body: 
+      string: ""
+    headers: 
+      Accept: 
       - application/xml
-      Accept-Encoding:
+      Accept-Encoding: 
       - gzip, deflate
-      User-Agent:
-      - Ruby
-  response:
-    status:
+  response: 
+    status: 
+      code: 400
+      message: Bad Request
+    headers: 
+      Content-Type: 
+      - application/xml
+      Date: 
+      - Fri, 09 Nov 2012 08:56:05 GMT
+      Content-Length: 
+      - "217"
+      Connection: 
+      - close
+    body: 
+      string: "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?><fault><reason>Operation Failed</reason><detail>[Cannot delete Template. Template is being used by the following VMs: rhevm1-jprovazn-09-rhevm1.]</detail></fault>"
+    http_version: 
+  recorded_at: Fri, 09 Nov 2012 08:56:06 GMT
+- request: 
+    method: get
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80
+    body: 
+      string: ""
+    headers: 
+      Content-Type: 
+      - application/xml
+      Accept: 
+      - application/xml
+      Accept-Encoding: 
+      - gzip, deflate
+  response: 
+    status: 
       code: 200
       message: OK
-    headers:
-      Date:
-      - Wed, 07 Nov 2012 15:14:35 GMT
-      Pragma:
+    headers: 
+      Set-Cookie: 
+      - JSESSIONID=bww6+N6Ah11Efz3lihkL4P-d; Path=/api; Secure
+      Content-Type: 
+      - application/xml
+      Pragma: 
       - No-cache
-      Cache-Control:
-      - no-cache
-      Expires:
+      Expires: 
       - Thu, 01 Jan 1970 01:00:00 CET
-      Set-Cookie:
-      - JSESSIONID=DBCsquEYD-l5J2LvDdoN8YUw; Path=/api; Secure
-      Content-Length:
-      - '0'
-      Connection:
+      Date: 
+      - Fri, 09 Nov 2012 08:57:44 GMT
+      Content-Length: 
+      - "1498"
+      Connection: 
       - close
-      Content-Type:
-      - text/plain; charset=UTF-8
-    body:
-      encoding: US-ASCII
-      string: ''
+      Cache-Control: 
+      - no-cache
+    body: 
+      string: |
+        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+        <template href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80" id="5472e759-dee1-4e90-a2bf-79b61a601e80">
+            <actions>
+                <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/export" rel="export"/>
+            </actions>
+            <name>test</name>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/disks" rel="disks"/>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/nics" rel="nics"/>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/cdroms" rel="cdroms"/>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/permissions" rel="permissions"/>
+            <type>server</type>
+            <status>
+                <state>ok</state>
+            </status>
+            <memory>536870912</memory>
+            <cpu>
+                <topology sockets="1" cores="1"/>
+            </cpu>
+            <os type="other_linux">
+                <boot dev="network"/>
+                <boot dev="hd"/>
+            </os>
+            <cluster href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95" id="99408929-82cf-4dc7-a532-9d998063fa95"/>
+            <creation_time>2012-11-09T09:56:44.989+01:00</creation_time>
+            <origin>rhev</origin>
+            <high_availability>
+                <enabled>false</enabled>
+                <priority>1</priority>
+            </high_availability>
+            <display>
+                <type>spice</type>
+                <monitors>1</monitors>
+                <allow_override>false</allow_override>
+            </display>
+            <stateless>false</stateless>
+            <usb>
+                <enabled>false</enabled>
+            </usb>
+        </template>
+
     http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:14:36 GMT
-- request:
-    method: get
-    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/6d0285c9-682d-4e0f-8cf8-abd3ac9530be
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
+  recorded_at: Fri, 09 Nov 2012 08:57:45 GMT
+- request: 
+    method: delete
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80
+    body: 
+      string: ""
+    headers: 
+      Accept: 
       - application/xml
-      Accept-Encoding:
+      Accept-Encoding: 
       - gzip, deflate
-      Content-Type:
+  response: 
+    status: 
+      code: 200
+      message: OK
+    headers: 
+      Set-Cookie: 
+      - JSESSIONID=BiYhU+8Xzl4EId-87uK7xfQw; Path=/api; Secure
+      Content-Type: 
+      - text/plain; charset=UTF-8
+      Pragma: 
+      - No-cache
+      Expires: 
+      - Thu, 01 Jan 1970 01:00:00 CET
+      Date: 
+      - Fri, 09 Nov 2012 08:57:44 GMT
+      Content-Length: 
+      - "0"
+      Connection: 
+      - close
+      Cache-Control: 
+      - no-cache
+    body: 
+      string: ""
+    http_version: 
+  recorded_at: Fri, 09 Nov 2012 08:57:45 GMT
+- request: 
+    method: get
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80
+    body: 
+      string: ""
+    headers: 
+      Content-Type: 
       - application/xml
-      User-Agent:
-      - Ruby
-  response:
-    status:
+      Accept: 
+      - application/xml
+      Accept-Encoding: 
+      - gzip, deflate
+  response: 
+    status: 
+      code: 200
+      message: OK
+    headers: 
+      Set-Cookie: 
+      - JSESSIONID=4jQAIdMVUkJAJ+TLw5qgGxWC; Path=/api; Secure
+      Content-Type: 
+      - application/xml
+      Pragma: 
+      - No-cache
+      Expires: 
+      - Thu, 01 Jan 1970 01:00:00 CET
+      Date: 
+      - Fri, 09 Nov 2012 08:57:44 GMT
+      Content-Length: 
+      - "1502"
+      Connection: 
+      - close
+      Cache-Control: 
+      - no-cache
+    body: 
+      string: |
+        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+        <template href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80" id="5472e759-dee1-4e90-a2bf-79b61a601e80">
+            <actions>
+                <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/export" rel="export"/>
+            </actions>
+            <name>test</name>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/disks" rel="disks"/>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/nics" rel="nics"/>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/cdroms" rel="cdroms"/>
+            <link href="/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80/permissions" rel="permissions"/>
+            <type>server</type>
+            <status>
+                <state>locked</state>
+            </status>
+            <memory>536870912</memory>
+            <cpu>
+                <topology sockets="1" cores="1"/>
+            </cpu>
+            <os type="other_linux">
+                <boot dev="network"/>
+                <boot dev="hd"/>
+            </os>
+            <cluster href="/api/clusters/99408929-82cf-4dc7-a532-9d998063fa95" id="99408929-82cf-4dc7-a532-9d998063fa95"/>
+            <creation_time>2012-11-09T09:56:44.989+01:00</creation_time>
+            <origin>rhev</origin>
+            <high_availability>
+                <enabled>false</enabled>
+                <priority>1</priority>
+            </high_availability>
+            <display>
+                <type>spice</type>
+                <monitors>1</monitors>
+                <allow_override>false</allow_override>
+            </display>
+            <stateless>false</stateless>
+            <usb>
+                <enabled>false</enabled>
+            </usb>
+        </template>
+
+    http_version: 
+  recorded_at: Fri, 09 Nov 2012 08:57:46 GMT
+- request: 
+    method: get
+    uri: https://admin%40internal:redhat@dell-per610-02.lab.eng.brq.redhat.com/api/templates/5472e759-dee1-4e90-a2bf-79b61a601e80
+    body: 
+      string: ""
+    headers: 
+      Content-Type: 
+      - application/xml
+      Accept: 
+      - application/xml
+      Accept-Encoding: 
+      - gzip, deflate
+  response: 
+    status: 
       code: 404
       message: Not Found
-    headers:
-      Date:
-      - Wed, 07 Nov 2012 15:14:35 GMT
-      Content-Type:
+    headers: 
+      Content-Type: 
       - text/html;charset=utf-8
-      Content-Length:
-      - '976'
-      Connection:
+      Date: 
+      - Fri, 09 Nov 2012 08:57:55 GMT
+      Content-Length: 
+      - "976"
+      Connection: 
       - close
-    body:
-      encoding: US-ASCII
-      string: ! '<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1
-        {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;}
-        H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;}
-        H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;}
-        BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;}
-        B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;}
-        P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A
-        {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP
-        Status 404 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b>
-        <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR
-        size="1" noshade="noshade"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>'
+    body: 
+      string: "<html><head><title>JBoss Web/7.0.16..Final-redhat-1 - Error report</title><style><!--H1 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;} H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;} H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;} BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;} B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;} P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP Status 404 - </h1><HR size=\"1\" noshade=\"noshade\"><p><b>type</b> Status report</p><p><b>message</b> <u></u></p><p><b>description</b> <u>The requested resource () is not available.</u></p><HR size=\"1\" noshade=\"noshade\"><h3>JBoss Web/7.0.16..Final-redhat-1</h3></body></html>"
     http_version: 
-  recorded_at: Wed, 07 Nov 2012 15:14:37 GMT
+  recorded_at: Fri, 09 Nov 2012 08:57:56 GMT
 recorded_with: VCR 2.2.5
